<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thomaskioko.akirachix.RegisterActivity">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strCreateAcc"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/akirachix_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvFullNames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strFullNames"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etFullNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strHintFullNames"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strUserName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strHintUserName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strEmail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strHintEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strHintPassword"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbShowPassword"
        android:id="@+id/checkBoxRegister" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnRegister"
            style="@style/Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/btnTextRegister" />

        <Button
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/btnLogin"
            style="@style/Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/btnTextLogin" />

    </LinearLayout>

</LinearLayout>
