<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="30dp"
    android:layout_gravity="center"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strTitleLogin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/akirachix_color"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strUserName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/strHintUserName"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/strHintPassword"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbRememberMe"
            android:checked="false" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnLogin"
                style="@style/Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/btnLogin" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/btnCancel" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
